fix(css): remove height "jumping"

--- a/src/textarea/textarea.css
+++ b/src/textarea/textarea.css
@@ -11,11 +11,11 @@
     --top-scale-xl: calc(
         strip(var(--font-size-l)) / strip(var(--font-size-xl))
     );
-    --filled-s-top-padding: 21px;
+    --filled-s-top-padding: 14px;
     --filled-m-top-padding: 28px;
     --filled-height: 110px;
     --filled-s-min-height: 43px;
-    --filled-m-min-height: 45px;
+    --filled-m-min-height: 40px;
 }
 
 .textarea {
@@ -283,7 +283,6 @@
             flex-grow: 1;
             justify-content: space-between;
             width: 100%;
-            height: 100%;
         }
     }
 
@@ -469,11 +468,9 @@
         }
 
         border-bottom-color: var(--color-error);
-        box-shadow: inset 0 -1px 0 var(--color-error);
 
         &.textarea_focused {
             border-bottom-color: var(--color-error);
-            box-shadow: inset 0 -1px 0 var(--color-error);
         }
     }
 
